<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<!--    Inline Style Example For TextView-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:id="@+id/tvCalculator"
        android:gravity="top|right"
        android:background="?colorPrimary"
        android:textSize="30sp"
        android:padding="15dp"
        />

<!--    Operators are colored using primary color -->
<!--    from respective themes.xml-->
<!--    All other buttons are styled using global -->
<!--    button style present in styles.xml-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.2">


        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
             />

        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"

             />

        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
             />

<!--        Operator Button-->

        <com.google.android.material.button.MaterialButton
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            app:backgroundTint="?colorPrimary"
            android:text="@string/division"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            android:text="@string/_7" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            android:text="@string/_8"
             />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            android:text="@string/_9"
             />

        <!--        Operator Button-->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:onClick="buttonClicked"
            app:backgroundTint="?colorPrimary"
            android:layout_weight="1"
            android:text="@string/subtraction"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:onClick="buttonClicked"
            android:layout_weight="1"
            android:text="@string/_4"
             />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:onClick="buttonClicked"
            android:layout_weight="1"
            android:text="@string/_5"
             />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            android:text="6"
             />

        <!--        Operator Button-->

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            app:backgroundTint="?colorPrimary"
            android:text="@string/addition"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            android:text="@string/_1"
             />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/_2"
            android:onClick="buttonClicked"
             />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            android:text="@string/_3"
             />

        <!--        Operator Button-->

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            app:backgroundTint="?colorPrimary"
            android:text="@string/multiply"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">


        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            
            android:text="@string/ac"
             />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            
            android:text="@string/_0"
             />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:onClick="buttonClicked"
            android:layout_weight="1"
            android:text="@string/dot"
             />

        <!-- Equal Button has its own custom color-->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/equal"
            android:onClick="buttonClicked"
            app:backgroundTint="#800000"
            android:textColor="@color/white"
             />
    </LinearLayout>


</LinearLayout>